# python-exoscale

./: .buildinfo  .gitignore  .sort-enums.py  LICENSE  Makefile  README.md  TODO  changes.html  configuration.html  exoscale.api.compute.html  exoscale.api.dns.html  exoscale.api.html  exoscale.api.iam.html  exoscale.api.polling.html  exoscale.api.runstatus.html  exoscale.api.storage.html  exoscale.html  index.html  modules.html  objects.inv  partner.html  pyproject.toml  pytest.ini  requirements.dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini  usage.html  v2.html
.github/workflows/: docs.yaml  fmt.yml  main.yml  openapi.yaml  pypi-package.yaml
_sources/: changes.md.txt  changes.rst.txt  configuration.md.txt  exoscale.api.compute.rst.txt  exoscale.api.dns.rst.txt  exoscale.api.iam.rst.txt  exoscale.api.polling.rst.txt  exoscale.api.rst.txt  exoscale.api.runstatus.rst.txt  exoscale.api.storage.rst.txt  exoscale.rst.txt  index.rst.txt  modules.rst.txt  partner.rst.txt
_static/: documentation_options.js
docs/: changes.md  changes.rst  conf.py  configuration.md  index.md  index.rst  partner.rst  usage.md  v2.rst
docs/_static/: theme_overrides.css
exoscale/: __init__.py  openapi.json  partner-api.json
exoscale/api/: __init__.py  compute.py  dns.py  exceptions.py  generator.py  iam.py  partner.py  polling.py  runstatus.py  storage.py  v2.py
tests/: conftest.py  test_client.py  test_compute.py  test_compute_anti_affinity_group.py  test_compute_elastic_ip.py  test_compute_instance.py  test_compute_instance_pool.py  test_compute_instance_volume.py  test_compute_instance_volume_snapshot.py  test_compute_network_load_balancer.py  test_compute_network_load_balancer_service.py  test_compute_private_network.py  test_compute_security_group.py  test_compute_security_group_rule.py  test_compute_ssh_key.py  test_config.py  test_dns.py  test_dns_domain.py  test_dns_domain_record.py  test_iam.py  test_iam_apikey.py  test_partner_client.py  test_runstatus.py  test_runstatus_page.py  test_runstatus_page_incident.py  test_runstatus_page_maintenance.py  test_runstatus_service.py  test_storage.py  test_storage_bucket.py  test_storage_bucket_file.py
