[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "exoscale"
authors = [{name="Exoscale", email="support@exoscale.com"}]
license = "ISC"
description = "Clients for Exoscale IaaS APIs"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "requests-exoscale-auth>=1.1.2",
    "requests>=2.22.0",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/exoscale/python-exoscale"
"Bug Tracker" = "https://github.com/exoscale/python-exoscale/issues"

[tool.hatch.version]
path = "exoscale/__init__.py"

[tool.hatch.build]
include = [
    "exoscale/*",
]

[tool.ruff]
line-length = 79
[tool.ruff.lint]
extend-select = ["B", "Q"]

[tool.black]
line-length = 79

[tool.uv]
dev-dependencies = [
    "requests-mock>=1.12.1",
    "pytest>=5.0.0",
    "recommonmark>=0.5.0",
    "sphinx-markdown-parser>=0.1.1",
    "sphinx-rtd-theme>=0.4.3",
    "sphinx>=2.1.2",
]
